--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,5 +19,7 @@ dependencies:
   json_annotation: ^3.0.1
   json_serializable: ^3.2.5
   path: ^1.6.4
+
 dev_dependencies:
-  test: ^1.14.2
+  flutter_test:
+    sdk: flutter
