--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: json_model
 description: Gernerating Dart model class from Json file.
-version: 0.0.11
+version: 0.0.12
 author: wendux <824783146@qq.com>
 homepage: https://github.com/flutterchina/json_model
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.1.0 <3.0.0'
 
 dependencies:
   args: ^1.5.2
